<resources>
    <string name="app_name">Dice Game</string>
    <string name="score_this_roll">Score This Roll:</string>
    <string name="total_score">Total Score:</string>
    <string name="roll_dice">Roll Dice</string>
    <string name="enable_triple">Enable Triple</string>
    <string name="enable_double">Enable Double</string>
    <string name="leftdiceimage">leftDiceImage</string>
    <string name="rightdiceimage">rightDiceImage</string>
    <string name="middlediceimage">middleDiceImage</string>
    <string name="doubleString">Double: +50</string>
    <string name="tripleText">Triple + 100</string>
    <string name="noBonus">No Score Enhancer</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="reset_scores">Reset Scores</string>
    <string name="save">Save</string>
    <string name="about">About</string>
    <string name="james_phillips_app_version_1_0">James Phillips App version 1.0</string>
    <string name="close">Close</string>
    <string name="scoreboard">Scoreboard</string>
    <string name="return_to_game">Return to Game</string>
</resources>